--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -17,8 +17,9 @@
 .container-searchbar {
   margin: 0 auto;
   width: 60%;
-  height: 65%;
+  height: 90%;
   align-items: center;
+  margin-bottom: 15%;
 }
 .grid-searchbar {
   padding-top: 5%;
@@ -29,7 +30,7 @@
 }
 
 .MuiTextField-root {
-  height: 100%;
+  height: 50%;
 }
 
 .txt-result .MuiOutlinedInput-root,
@@ -39,5 +40,22 @@ input {
 .error-alert {
   width: 40%;
   margin-left: 9%;
-  margin-top: 5%;
+  margin-top: 2%;
+}
+
+.lbl-stats {
+  text-align: center;
+  text-decoration: underline;
+}
+.lbl-stats-subtitle {
+  padding-left: 5%;
+  padding-top: 2%;
+}
+
+.txt-stats,
+.txt-stats .MuiOutlinedInput-root,
+input {
+  margin: 0 auto;
+  align-items: center;
+  width: 100%;
 }
